<resources>
    <string name="app_name">金程网校</string>
    <string name="register_txt">注册</string>
    <string name="hint_txt">请输入手机号码或用户名</string>
    <string name="hint_pwd_txt">请输入密码</string>
    <string name="login_txt">登录</string>
    <string name="fast_login_txt">快速免密登录</string>
    <string name="findPwd_txt">忘记密码</string>
    <string name="partner_txt">合作账号登录</string>
    <string name="register_hint_txt">请输入昵称</string>
    <string name="register_phone_hintTxt">请输入11位手机号码</string>
    <string name="identify_hint_txt">请输入验证码</string>
    <string name="verify_hint_txt">请输入动态码</string>
    <string name="verify_button_txt">获取动态码</string>
    <string name="register_PWD_txt">密码由8到15位数字和字母组成</string>
    <string name="user_tip_txt">未注册的手机号码验证后自动创建金程账号,且代表您已经同意</string>
    <string name="user_actionTip_txt">《金程用户协议》</string>
    <string name="own_user_txt">已有账号,</string>
    <string name="immediately_login_txt">马上登录</string>
    <string name="next_txt">下一步</string>
    <string name="ensure_txt">确定</string>
    <string name="finish_txt">完成</string>
    <string name="ensure_pwd_txt">确认密码</string>
    <string name="dialog_hit_txt">密码设置成功，请妥善保存您的密码</string>
    <string name="dialog_login_txt">立即登录</string>
    <string name="tab_noHaveCard_txt">无金程账号</string>
    <string name="tab_haveCard_txt">有金程账号</string>
    <string name="card_register_txt">注册</string>
    <string name="noCard_notice_txt">点击注册按钮，自动生成一个同昵称的金程账号并绑定微信，今后可以通过微信号直接登录</string>
    <string name="card_bind_txt">绑定</string>
    <string name="haveCard_notice_txt">点击绑定后，今后可以直接用微信号登录</string>
    <string name="tip_login_txt">登录后才能查看课程</string>
    <string name="have_finish_txt">坚持学习</string>
    <string name="have_notFinish_txt">未完成学时</string>
    <string name="have_cache_txt">已缓存的视频</string>
    <string name="test_txt">距离2017年6月3日\nCFA一级考试，还有</string>
    <string name="study_progress_txt">学习进度</string>
    <string name="form_txt">课表</string>
    <string name="question_txt">问题</string>
    <string name="note_txt">笔记</string>
    <string name="material_txt">资料</string>
    <string name="qr_txt">扫码签到</string>
    <string name="finish_time_txt">完成学时</string>
    <string name="attendence_txt">出勤率</string>
    <string name="search_hint_txt">请输入需要搜索的上课内容</string>
    <string name="cancel_txt">取消</string>
    <string name="course_detail_txt">课程详情</string>
    <string name="course_teacher_text">授课老师</string>
    <string name="scan_tips">\"将二维码图片对准扫描框即可自动扫描\"</string>
    <string name="nostart">未开始</string>
    <string name="course_note_txt">本课笔记</string>
    <string name="course_ques_txt">本课提问</string>
    <string name="add_note_hint_txt">请输入笔记内容</string>
    <string name="add_img_hint_txt">添加图片</string>
    <string name="map_knowledge_txt">知识地图：</string>
    <string name="response_txt">0追问</string>
    <string name="relative_txt">相关问题</string>
    <string name="delete_txt">删除</string>
    <string name="no_answer">暂无答案</string>
    <string name="zhuiwen_txt">我要追问</string>
    <string name="input_hint_txt">我也说一句</string>
    <string name="comment_txt">评论</string>
    <string name="note_hint_txt">请先选择笔记对应科目</string>
    <string name="test_report_txt">测试报告</string>
    <string name="test_reset_txt">重做</string>
</resources>
