<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title_layout"
        layout="@layout/base_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/userImg_layout"
        android:layout_width="match_parent"
        android:layout_height="360px"
        android:background="@drawable/personinfo_bg"
        android:layout_below="@+id/title_layout"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/img_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/nike_Img"
                android:layout_width="160px"
                android:layout_height="160px"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="50px"
                android:scaleType="fitXY"
                android:src="@drawable/icon_avatar" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tip_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_layout">

            <TextView
                android:id="@+id/tip_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="50px"
                android:text="@string/tip_login_txt"
                android:textColor="@color/input_bg_color"
                android:textSize="28px" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_Btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userImg_layout"
        android:layout_marginTop="80px">

        <Button
            android:id="@+id/login_Btn"
            android:layout_width="542px"
            android:layout_height="82px"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:background="@drawable/login_button_bg"
            android:text="@string/login_txt"
            android:textColor="@color/input_bg_color"
            android:textSize="32px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/register_Btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_Btn_layout"
        android:layout_marginTop="48px">

        <Button
            android:id="@+id/register_Btn"
            android:layout_width="542px"
            android:layout_height="82px"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_register_bg"
            android:text="@string/register_txt"
            android:textColor="@color/register_txt_color"
            android:textSize="32px" />
    </RelativeLayout>


</RelativeLayout>